--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "babel": "^5.8.23",
     "babel-loader": "^5.3.2",
+    "d3": "^3.5.6",
+    "nvd3": "^1.8.1",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "webpack": "^1.12.2"
