--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3": "^3.5.6",
     "nvd3": "^1.8.1",
     "react": "^0.13.3",
+    "react-d3-components": "^0.4.8",
     "react-router": "^1.0.0rc1",
     "webpack": "^1.12.2"
   }
